머티리얼 YAML 파싱 오브젝트 구조

--- a/Editor/Shader.Almighty.asmdef
+++ b/Editor/Shader.Almighty.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Shader.Almighty",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:b3f49edfedc855a48aa1a9e5d3cba438"
+    ],
     "includePlatforms": [
         "Editor"
     ],
